
plugins:
- new primal heuristic "rens"
- new primal heuristic "mutation"
- slightly modified crossover and rins heuristics
- improved presolving of and, or, and xor constraints
- improved performance of intdiving heuristic
- new primal heuristic "veclendiving"
- improved heuristic "octane"
- improved heuristic "shifting"
- slightly modified rens and localbranching heuristics

parameters:
- new parameter "reading/zplreader/changedir" to control behavior of path switching of ZIMPL file reader
- new parameter "reading/zplreader/parameters" to pass additional parameters to ZIMPL
- new parameter "propagating/abortoncutoff"
- changed default value of "heuristics/octane/usediffray" to FALSE
- new parameter "heuristics/octane/useavgwgtray"
- removed parameter "heuristics/octane/usediffbwray"
- renamed parameter "heuristics/octane/useavgray" to "heuristics/octane/useavgnbray"
- new parameter "heuristics/octane/useavgray"
- changed default value of "heuristics/rens/binarybounds" to TRUE
- changed default value of "heuristics/octane/freq" to -1 in order to deactivate Octane

features:
- primal heuristics that run before the node is solved now know already whether the LP will be solved at the current node
  or not
- command shell now understands escape characters ",', and \ which makes it possible to read in files with spaces in
  the name
- updated XPress interface to XPress-MP 17 (contributed by Michael Perregard)

fixed bugs:
- fixed bug with adding constraints with INITIAL=true and separating them afterwards, which lead to a second addition
  of the constraint's relaxation in the child node
- fixed bug in cmir cut separator, that 8*delta was not tried
- fixed bug in cmir cut separator with wrong sign of slack in row score function
- fixed bug with string pointer copy instead of string content duplication in constructors of C++ wrapper classes
- fixed bug in CPLEX interface with basis access methods that dualopt has to be called for more error status codes