@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: heur_coefdiving.c,v 1.47 2006/07/18 09:42:04 bzfpfend Exp $"
+#pragma ident "@(#) $Id: heur_coefdiving.c,v 1.48 2006/07/20 09:51:56 bzfpfend Exp $"
 
 /**@file   heur_coefdiving.c
  * @brief  LP diving heuristic that chooses fixings w.r.t. the matrix coefficients
@@ -388,19 +388,11 @@ SCIP_DECL_HEUREXEC(heurExecCoefdiving) /*lint --e{715}*/
             roundup = (nlocksdown > nlocksup || (nlocksdown == nlocksup && frac > 0.5));
             if( roundup )
             {
-#if 0 /*?????????????????????? try this! */
-               nviolrows = nlocksup - nlocksdown + SCIPgetNLPRows(scip); /* improve this! */
-#else
                nviolrows = nlocksup;
-#endif
                frac = 1.0 - frac;
             }
             else
-#if 0 /*?????????????????????? try this! */
-               nviolrows = nlocksdown - nlocksup + SCIPgetNLPRows(scip); /* improve this! */
-#else
                nviolrows = nlocksdown;
-#endif
 
             /* penalize too small fractions */
             if( frac < 0.01 )
